<resources>
    <string name="app_name">Kitsu App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--menu item name strings-->
    <string name="anime">Anime</string>
    <!-- TODO add all next -->

    <!--item anime strings-->
    <string name="animeRating">Rating: %s</string>
    <string name="animePopularity">Popularity Rank : %s</string>
    <string name="animeAgeLimit">Age limit : %s</string>
    <!--anime detail screen strings-->
    <string name="animeEpisodeCount">Episode Count : %s</string>
    <string name="animeEpisodeLength">Episode Length : %s</string>
    <string name="animeTotalLength">Total Length : %s</string>
    <string name="animeStartDate">Start Date : %s</string>
    <string name="animeEndDate">End Date : %s</string>

    <!-- DrawerLayoutToggle -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!--anime load error string-->
    <string name="ooops_n_something_went_wrong_n_please_try_again_later">Ooops… \n Something went wrong \n Please try again later</string>
    <string name="characters">Characters</string>
    <string name="manga">Manga</string>
    <string name="category">Category</string>
    <string name="settings">Settings</string>
    <string name="support_and_faq">Support and FAQ</string>
</resources>