<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:icon="@drawable/ic_character"
        android:title="@string/characters" />
    <item
        android:id="@+id/animesListFragment"
        android:icon="@drawable/ic_baseline_remove_red_eye_24"
        android:title="@string/anime" />
    <item
        android:id="@+id/mangaListFragment"
        android:icon="@drawable/ic_manga"
        android:title="@string/manga" />
    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/ic_baseline_category_24"
        android:title="@string/category" />

    <item android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/settings" />
                <item
                    android:icon="@drawable/ic_support"
                    android:title="@string/support_and_faq" />
            </group>

        </menu>
    </item>

</menu>